# k8s-release-notes-sync

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sync_release_notes.sh  sync_tool.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md
krel-utils/AIPrompts/: release-notes-review-guidelines.md  review_release_notes_aiAgent.md
krel-utils/scripts/: .envrc  README.md  compare_pr_numbers.py  compress_release_notes_json.py  devbox.json  find_missing_release_notes.py  fix-release-notes-capitalization.bash  flag_release_notes_common_issues.py  sync_map_fields.py
krel-utils/scripts/rn_review/: README.md  __init__.py  __main__.py  cli.py  config.py  map_generator.py  models.py  review_file.py
krel-utils/scripts/rn_review/extractors/: __init__.py  diff_extractor.py  github_extractor.py  json_extractor.py  markdown_extractor.py  test_markdown_extractor.py
release_notes_sync/: __init__.py  comparator.py  constants.py  file_loader.py  formatter.py  git_helper.py  sync_engine.py  validator.py
